Исправил миграции
