# models/employee.go
@@ -11,12 +11,12 @@ type Department struct {
 }
 
 type Employee struct {
-    ID           int        `json:"id"`
-    Name         string     `json:"name"`
-    Surname      string     `json:"surname"`
-    Phone        string     `json:"phone"`
-    CompanyID    int        `json:"company_id"`
-    DepartmentID int        `json:"department_id"`
-    Passport     Passport   `json:"passport"`
-    Department   Department `json:"department"`
+    ID          int        `json:"id"`
+    Name        string     `json:"name"`
+    Surname     string     `json:"surname"`
+    Phone       string     `json:"phone"`
+    CompanyID   int        `json:"company_id"`
+    DepartmentID int       `json:"department_id"`
+    Passport    *Passport  `json:"passport,omitempty"`
+    Department  *Department `json:"department,omitempty"`
 }
